--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GPR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # prepare image tags
       - name: Prepare Image Tags
