--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,7 +9,7 @@ release:
   # Same as for github
   # Note: it can only be one: either github, gitlab or gitea
   github:
-    owner: Paper-Dragon
+    owner: lsjnb
     name: frp
 
   draft: false
