--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -2,6 +2,9 @@ name: goreleaser
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*.*.*-*'
 
 jobs:
   goreleaser:
@@ -27,4 +30,12 @@ jobs:
           version: latest
           args: release --clean --release-notes=./Release.md
         env:
-          GITHUB_TOKEN: ${{ secrets.GPR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
+
+      - name: Trigger sync
+        env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
+          GH_DEBUG: api
+        run: |
+          gh workflow run sync-release.yml --ref ${{ github.ref }}
